# corosexport

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_backup.py
src/corosexport/: backup.py  client.py  models.py
src/corosexport/cli/: backup.py
